Fix form view header alignment

--- a/src/scss/global/_reset.scss
+++ b/src/scss/global/_reset.scss
@@ -17,7 +17,7 @@ a {
 }
 
 button {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-weight: normal;
   background: none;
   border: none;
@@ -30,7 +30,7 @@ button {
 }
 
 input {
-  font-family: 'Inter';
+  font-family: "Inter";
   color: inherit;
   border: none;
   outline: none;
